fix: finalizacao do projeto 1.0
